--- a/entrenamiento-en-casa.html
+++ b/entrenamiento-en-casa.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">No dudes más y empieza tus sesiones de ejercicios diarios en casa.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Descubre la mejor web de entrenamiento online</h2>
                     <p class="text-white text-medium mb-5">Con ictiva puedes elegir el plan de entrenamiento fitness que mejor te conviene y ponerte en forma en casa</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>A veces no tenemos tiempo, dinero o nos da vergüenza ir a un gimnasio convencional, por lo que la opción de hacer entrenamiento en casa es la mejor, ya que te permite decidir cuándo entrenar desde la comodidad de tu hogar, sin tener que salir, ahorrando dinero y tiempo.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Nuestra página web es ideal porque en un mismo sitio encuentras los ejercicios que puedes hacer, te proponemos dietas que complementarán tus sesiones y te harán alcanzar tu objetivo más rápido, hacemos un seguimiento de tu evolución y te ayudamos a encontrar la motivación extra que necesitas para entrenar y no saltarte una sesión nunca.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Como ya te hemos comentado antes, en ictiva te ofrecemos una experiencia completa como si de un gimnasio tradicional se tratara, para que no te falte de nada para lograr tus objetivos.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Con ictiva solo tienes que buscar el vídeo que quieres hacer y darle al play. De esta forma nunca llegarás tarde a una clase y el gimnasio seguirá igual cuando acabes las sesiones del entrenamiento virtual diario.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -406,7 +406,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que encuentres el equilibrio perfecto entre el ejercicio por libre y las ventajas de supervisión que ofrece un gimnasio, ictiva te facilita un entrenador virtual. Este entrenador virtual es un sistema inteligente que se adapta a cada usuario y a las necesidades que tiene cada uno al 100%.</p>
                     <p class="mb-3 ls text-medium">Con este entrenador podrás crear tus propios planes de entrenamiento en casa, tanto para hacerlos en casa como para llevarlos allí dónde vayas. Cuenta con más de 800 vídeos con lo que cada rutina será de lo más variada, para que no resulte aburrido entrenar en casa.</p>
                     <p class="mb-3 ls text-medium">De esta manera, te sentirás acompañado en todo momento. Además, para completar la información que recibes, ya que cuanta más información tenga, mejor. En cada vídeo te proporcionamos varios datos sobre el ejercicio que estás realizando, como por ejemplo, las calorías que se queman al hacerlo, qué partes del cuerpo hace trabajar, qué entrenador realiza el ejercicio y la duración del vídeo, entre otros.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva puedes encontrar numerosas salas de ejercicios o, si lo deseas, puedes comenzar un plan de ejercicios online que combine varias salas de ejercicios. ictiva te ayudará a elegir el entreno que te conviene según tu estado de forma y tus objetivos.</p>
                     <p class="mb-3 ls text-medium">Si quieres algo más intenso puedes hacer hiit, para ello debes tener un nivel medio o avanzado, es ideal para aquellas personas que no tienen mucho tiempo para entrenar ya que las sesiones duran entre 15 y 20 minutos.</p>
                     <p class="mb-3 ls text-medium">Navega en nuestra web para encontrar el entrenamiento online que quieres hacer, ya que también disponemos de ejercicios de abdominales, de yoga, de pilates, total combat, etc.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -442,7 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Al descargar la aplicación tendrás acceso a tu <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary" target="_blank">entrenamiento personalizado online</a>, a más de 50 vídeos gratuitos para que los veas tantas veces como quieras. Al abonarte, podrás ver las más de 800 videosesiones de las 21 disciplinas diferentes.</p>
                     <p class="mb-3 ls text-medium">Además, también tendrás acceso a información sobre tu evolución, como por ejemplo, tu peso, las calorías que has quemado, los vídeos que has visto, tu IMC y mucho más, a través de gráficos y estadísticas.</p>
                     <p class="mb-3 ls text-medium">Con todo esto no necesitarás nada más para empezar hoy mismo tu sesión de deporte diaria. ¿A qué esperas para empezar?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -458,7 +458,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Si quieres lograr tu objetivo de forma eficiente, debes complementar el entrenamiento virtual con una dieta sana, variada y equilibrada. Mucha gente no sabe cómo elaborarla, es por esto que contamos con un apartado llamado “Dietas y recetas”.</p>
                     <p class="mb-3 ls text-medium">Aquí encontrarás dietas completas, de 5 platos diarios, en función del objetivo que tengas. Te enseñamos cómo se prepara cada una de ellas, y además, si algún plato no te gusta también te proponemos algunos que pueden sustituirlo. </p>
                     <p class="mb-3 ls text-medium">La dieta, junto con el entreno personalizado online hará que logres tu objetivo mucho más rápido. Haciendo que te sientas mejor con tu cuerpo y mejorando tu ánimo tu salud en general. </p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
