--- a/gimnasio-online-landing-registro.html
+++ b/gimnasio-online-landing-registro.html
@@ -47,7 +47,7 @@
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Ejercicios Fitness en casa para tu entrenamiento diario. Clases, vídeos y rutinas para hombres y mujeres online." />
-    <meta name="keywords" content="Gimnasio online, gimansio en casa, gimnasio videos, video gym, fitness, entrenamiento online, rutinas gimnasio, online gym" />
+    <meta name="keywords" content="Gimnasio online, gimnasio en casa, gimnasio videos, video gym, fitness, entrenamiento online, rutinas gimnasio, online gym" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Gimnasio online para realizar ejercicios en casa." />
     <meta property="og:description" content="Ejercicios Fitness en casa para tu entrenamiento diario. Clases, vídeos y rutinas para hombres y mujeres online." />
