--- a/hiit-en-casa.html
+++ b/hiit-en-casa.html
@@ -111,7 +111,7 @@
                         <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                 </ul>
             </div>
@@ -145,12 +145,12 @@
                     </div>
                 </div> -->
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit">AHORA 3 MESES x 15€ Ahora</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit">AHORA 3 MESES x 15€</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=hiit-en-casa&utm_medium=adwords-landing&utm_campaign=hiit">INICIA TU ENTRENAMIENTO</a></p>
                     </div>
                   </div>
                 </div>
