--- a/rutinas-gimnasio.html
+++ b/rutinas-gimnasio.html
@@ -46,11 +46,11 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Elige una de nuestras rutinas de gimnasio para entrenar en casa y conseguir un cuerpo fuerte y tonificado. AHORA 3 MESES x 15€ a cambiar tu físico!" />
+    <meta name="description" content="Elige una de nuestras rutinas de gimnasio para entrenar en casa y conseguir un cuerpo fuerte y tonificado. Empieza hoy mismo a cambiar tu físico!" />
     <meta name="keywords" content="rutinas gimnasio, rutinas de gimnasio, rutinas para gimnasio, rutinas para gym, rutina gym, rutinas gimnasio en casa" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Rutinas gimnasio para ponerte en forma en casa" />
-    <meta property="og:description" content="Elige una de nuestras rutinas de gimnasio para entrenar en casa y conseguir un cuerpo fuerte y tonificado. AHORA 3 MESES x 15€ a cambiar tu físico!" />
+    <meta property="og:description" content="Elige una de nuestras rutinas de gimnasio para entrenar en casa y conseguir un cuerpo fuerte y tonificado. Empieza hoy mismo a cambiar tu físico!" />
     <meta property="og:url" content="https://www.ictiva.com/rutinas-gimnasio/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Gracias a nuestras videosesiones conseguirás un cuerpo de infarto</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Con ictiva tendrás tu rutina gym según tus objetivos.</h2>
                     <p class="text-white text-medium mb-5">Cientos de rutinas en videosesiones te esperan para que empieces hoy mismo.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Estas clases están dirigidas por profesores expertos en cada una de las disciplinas y cuentan con varios años de experiencia. Gracias a ellos aprenderás rápidamente como se hace cada movimiento sin lesionarte.</p> 
                     <p class="mb-3 ls text-medium">Otra de las cosas que te permiten estas sesiones es que sabes con antelación qué es lo que vas a hacer cada día. Te permite establecer y respetar los días de descanso y gracias a esto podrás organizar mejor tu vida.</p> 
                     <p class="mb-3 ls text-medium">Como ves, contar con ictiva es mejorar en todos los aspectos del entrenamiento y contar con una experiencia completa. Entra en ictiva y nosotros nos encargaremos de todo, tu solo da al play al video de hoy.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -388,7 +388,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Una vez más, en ictiva hemos pensado en todo y hemos creado un apartado donde encontrarás regímenes de 5 comidas al día, completas y sabrosas, en cada plato encontrarás la receta para prepararlo en casa, con pasos fáciles y rápidos.</p> 
                     <p class="mb-3 ls text-medium">Por si no puedes comer alguno de nuestros platos o tienes alguna alergia te recomendamos otros por los que los puede sustituir.</p>
                     <p class="mb-3 ls text-medium">Estos platos serán el mejor complemento a vuestras rutinas de gimnasio, y os aseguramos que no vais a pasar hambre, ya que una buena dieta consiste en comer varias veces al día y no en pasar hambre, ay que si lo haces así conseguirás el efecto contrario, ganarás peso.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -405,7 +405,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Los usuarios pueden ver los datos semanales, mensuales, trimestrales o anuales y se trata de:</p> 
                     <p class="mb-3 ls text-medium">El IMC (Índice de Masa Corporal), el peso, las calorías que quemas haciendo las rutinas para gimnasio y las demás disciplinas, el tiempo total que has estado entrenando, qué días haces ejercicios y las disciplinas que has hecho.</p> 
                     <p class="mb-3 ls text-medium">Además de poder ver la información sobre tus datos antropométricos, sobre el pecho, piernas, espalda, etc. Para que puedan asegurarse ellos mismo si su masa corporal ha aumentado o disminuido, en función de los objetivos que tenga cada uno, si ven que no es así, siempre pueden corregir sus entrenamientos.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -422,7 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Con nuestra APP, que es una de las mejores y más completas del mercado, entrenar es tan fácil como elegir el día y la hora que quieres hacer los ejercicios y nosotros nos encargamos de darte los ejercicios que tienes que hacer, ¡da al play y empieza hoy!</p> 
                     <p class="mb-3 ls text-medium">Llevar una vida saludable nunca fue tan fácil, gracias a la gran variedad de disciplinas que tenemos (25) y a nuestras más de 800 videosesiones diferentes, las dietas y el seguimiento, tendrás una experiencia completa para asegurar tu bienestar.</p> 
                     <p class="mb-3 ls text-medium">No lo dudes más y descubre hoy las rutinas para gym que hemos preparado para ti. Prueba de forma totalmente gratis 50 clases, puedes repetir tantas veces como quieras aquellas clases que más te gustan.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -439,7 +439,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Lo que hace esta herramienta es darte una frase de motivación cada vez que acabas de ver un vídeo entero, por ejemplo, una de las rutinas de gimnasio. Además, después de cada sesión os dará puntos para que los podáis ir acumulando, al final de cada mes y de cada trimestre los usuarios que tengan más se llevarán un premio, por ejemplo, ¡un viaje de fin de semana a una ciudad europea!</p> 
                     <p class="mb-3 ls text-medium">Podéis conseguir puntos extra si compartís las sesiones que habéis hecho en las redes sociales.</p> 
                     <p class="mb-3 ls text-medium">Entrad ahora en el motivator para ver cómo funciona y ver cuántos puntos tenéis, empezad hoy mismo a acumularlos e intentar ganar uno de los premios.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -456,7 +456,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En Facebook tenemos una novedad, hemos creado grupos específicos en función de los objetivos de los integrantes del grupo, para que se animen unos a otros y resuelvan sus dudas, por ejemplo, el grupo Wellness para los que hagan yoga o pilates.</p> 
                     <p class="mb-3 ls text-medium">En los blogs encontrarás las últimas novedades sobre deporte y bienestar. Además de consejos prácticos que te ayudarán a mejorar la rutina gym.</p>
                     <p class="mb-3 ls text-medium">No lo dudes más y únete hoy a nuestras redes sociales para interactuar con los demás deportistas que tiene el mismo objetivo que tú, serán un gran apoyo, ya verás.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
