--- a/yoga-para-principiantes.html
+++ b/yoga-para-principiantes.html
@@ -259,7 +259,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -278,7 +278,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Clases diseñadas para conseguir la armonía entre tu cuerpo y mente.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">VIDEOSESIONES DE INICIACIÓN AL YOGA</h2>
                     <p class="text-white text-medium mb-5">Regístrate en ictiva, conviértete en un yogui hoy mismo.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Además, como mucho vas a usar una esterilla para que no te duela el cuerpo cuando hagas los ejercicios en el suelo, por lo que no tendrás que gastar mucho dinero en material o en cargar con cosas pesadas.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>También es muy fácil aprender las diferentes posturas de yoga para principiantes y a los pocos días notarás que tu cuerpo está más relajado, se empieza a tonificar y que estarás menos estresado. Con todas estas ventajas, ¿a qué esperas para empezar con tus sesiones online?</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -388,7 +388,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Entre las asanas que vas a prender en tu iniciación al yoga encontrarás una técnica de meditación, el gato, el perro mirando abajo, el guerrero o el niño. Estas posturas no son muy difíciles de hacer y no requieren de grandes movimientos o que forcemos el cuerpo, tanto mayores como niños pueden hacerlas.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Esto lo convierte en el deporte ideal para practicar en familia, podéis entrar en nuestro gimnasio online y elegir la sesión que queréis y hacerla con vuestros hijos, os servirá para tenerlos controlados, para que hagan deporte y también os hará estrechar lazos. Si no, también las podéis hacer con vuestros padres, o con un amigo o amiga, veréis que pasaréis un buen momento entre risas mientras os aprendéis los nombres de cada postura.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -405,7 +405,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">A los que ya tienen más experiencia con este deporte, el profesor debe retarlos a que se superen y proponerles ejercicios que exijan más intensidad y de más dificultad.</p>
                     <p class="mb-3 ls text-medium">Es por esto que en ictiva contamos con profesores experimentados y que se dediquen de forma profesional a esto.</p>
                     <p class="mb-3 ls text-medium">En ictiva hemos seleccionado una profesora que tiene varios años de experiencia en centros oficiales y que sabe explicar muy bien cómo hacer las asanas, es Rosa Mº Madrid. Una gran profesional.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -422,7 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Te ofrecemos más de 50 vídeos gratis de todas nuestras disciplinas para que los veas tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Esta es una de las aplicaciones más completas del mercado que te ofrece un acompañamiento completo, aparte de los ejercicios encontrarás información sobre tu evolución física, como por ejemplo tu peso, tu IMC, las calorías que has quemado, los vídeos que has hecho y mucho más, es como tener un entrenador personal en casa.</p>
                     <p class="mb-3 ls text-medium">Además, la puedes llevar contigo a todas partes y hacer ejercicio donde quieras, en el parque, en casa o aprovechando un descanso en el trabajo. ¿A que está bien poder tener alguien que te guíe con los ejercicios entrenes donde entrenes? ¡Descárgatela hoy!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -438,7 +438,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Uno de los elementos fundamentales para los que hacen deporte es la nutrición, es igual de importante el hecho de comer bien como el hecho de hacer ejercicio, ya que nos ayudará a estar saludables, a perder peso y ganar masa muscular.</p>
                     <p class="mb-3 ls text-medium">La dieta que debe seguir cada deportista es diferente, se preparar un plan nutricional en función del objetivo que tenga cada uno. Eso sí, todas ellas tienen en común que deben ser completas, de 5 comidas al día, ya que no se trata de pasar hambre sin de comer mejor, para evitar así comer entre horas y el efecto rebote.</p>
                     <p class="mb-3 ls text-medium">Nosotros tenemos un apartado con dietas en función de los objetivos que tiene nuestros usuarios, allí encontraréis cómo hacer cada plato, un plato que puede sustituir aquellos que no os gusten o que no podéis comer y la información nutricional de cada uno. Así encontraréis la dieta que será el mejor complemento a vuestra iniciación al yoga.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
@@ -455,7 +455,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Lo primero es que hagas una visita al médico para que te haga una revisión general y se asegure de que todo va bien y que puedes hacer deporte.</p>
                     <p class="mb-3 ls text-medium">El número de calorías que anunciamos que vas a perder haciendo los ejercicios es a título informativo ya que al final dependerá de varios factores y no todos dependen de nosotros.</p>
                     <p class="mb-3 ls text-medium">ictiva no se hace responsable del uso incorrecto que puedan hacer los usuarios de todas nuestras plataformas y no garantiza los resultados.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
             </div>
         </div>
