--- a/fitness-online.html
+++ b/fitness-online.html
@@ -112,7 +112,7 @@
                         <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">AHORA 3 MESES x 15€</a>
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
                     </li>
                 </ul>
             </div>
@@ -126,12 +126,12 @@
                 <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
                 <h2 class="text-white font-weight-bold py-5 px-2 hidden-xs-down">Tus ejercicios de Fitness en casa</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">AHORA 3 MESES x 15€</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">INICIA TU ENTRENAMIENTO</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding mt-5">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">AHORA 3 MESES x 15€</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">INICIA TU ENTRENAMIENTO</a></p>
                     </div>
                   </div>
                 </div>
