--- a/ejercicios-hipopresivos.html
+++ b/ejercicios-hipopresivos.html
@@ -503,8 +503,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <ul class="pl-0">
                         <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/programa-afiliacion/">Programa de afiliación</a></li>
                         <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/publicidad/">Publicidad</a></li>
-                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="#">ictiva en los medios</a></li>
-                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="http://www.ictivawork.com/">ictiva para empresas</a></li>
+                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.descuentoestudiante.com/ictiva-descuento-estudiante-iframe" target="_blank">Descuento estudiantes</a></li>
+                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://wellwo.es/" target="_blank">Empresa Saludable</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 col-md-2 p-0 mt-4 mt-md-0">
