--- a/landing-ictiva-3-original.html
+++ b/landing-ictiva-3-original.html
@@ -213,7 +213,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link text-blue" href="http://www.ictivashop.com/">Shop</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn"><strong>30% DTO</strong></a>
                             </li>
                         </ul>
                     </div>
