--- a/abdominales-en-casa.html
+++ b/abdominales-en-casa.html
@@ -258,7 +258,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-2 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio"><strong>30% DTO</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
