--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Oferta Especial Retorno - 30% dto - Código: FBK30</p>
+                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Últimos días - 30% dto - Código: FBK30</p>
                 <!-- <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
